# src/routes/cart-route.js
@@ -4,7 +4,7 @@ import { postCart, getCart, deleteCarts } from "../controllers/cart.js";
 const cartRouter = express.Router();
 
 cartRouter.post("/cart", postCart);
-cartRouter.get("/carts", getCart);
+cartRouter.get("/carts/:userId", getCart);
 cartRouter.delete("/deleteCarts/:id", deleteCarts);
 
 export default cartRouter;
